# claimbound-public-benchmarks

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  reproduction_request.yml
.github/PULL_REQUEST_TEMPLATE/: reproduction_rerun.md
artifacts/: anthropic_system_cards_source_audit_d001_summary.json  google_deepmind_model_cards_source_audit_d001_summary.json  grok_prompts_source_audit_d001_local_rerun_summary.json  nasa_power_d103_manual_reproduction_summary.json  openai_gpt5_system_card_source_audit_d001_summary.json
docs/: AI_PROVENANCE_LOG.md  AI_USE.md  AI_WORKFLOW.md  AUDIENCE_AND_VALUE.md  AUDIENCE_TESTIMONIAL_WORKFLOWS.md  CLAIMBOUND_IN_5_MINUTES.md  CURRENT_EVIDENCE_TRACKS.md  DEMO_TRACKS_TO_EVIDENCE_CARDS.md  EVIDENCE_CARD.md  FLAGSHIP_WORKFLOW_GROK_EVIDENCE.md  FUNDING_PROVENANCE.md  GETTING_STARTED.md  INDEPENDENT_RERUN_WORKFLOW.md  MANUAL_AUDIT_PROTOCOL.md  PROJECT_NEXT_STEPS.md  RESULT_STATUS.md  ROADMAP.md  SCAFFOLD_AUTOMATION_PLAN.md  USE_CASES.md
docs/evidence_cards/: CLAIMBOUND-AI_PRODUCT_CLAIM_D001-2026-05-07.json  CLAIMBOUND-ANTHROPIC_SYSTEM_CARDS_SOURCE_AUDIT_D001-2026-05-08.json  CLAIMBOUND-CIVIC_CLAIM_D001-2026-05-07.json  CLAIMBOUND-EDU_REPRO_D001-2026-05-07.json  CLAIMBOUND-FUNDING_REVIEW_D001-2026-05-07.json  CLAIMBOUND-ML_APPENDIX_D001-2026-05-07.json  README.md  (+7 more)
scripts/: claimbound_render_evidence_card_svg.py  claimbound_run_public_doc_source_audit.py
specs/: repo_version.yaml
tests/: test_cli.py  test_public_doc_source_audit.py  test_run_root.py  test_svg_renderer.py
(+4 files in other folders)
