[project]
name = "claimbound-public-benchmarks"
version = "0.3.0"
description = "ClaimBound public evidence-card toolkit for narrow public AI, ML and data claims"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
]

[project.scripts]
claimbound = "claimbound_public_benchmarks.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claimbound_public_benchmarks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
